k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: goals
spec:
  selector:
    app: goals
  ports:
  - port: 8080
    targetPort: 8080
